# freertos-msp430fr4133

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
inc/: clock.h  watchdog.h
src/: .clang-format  CMakeLists.txt  clock.c  clock.h  gdbfile  gpio.c  gpio.h  hardware.c  hardware.h  main.c  pmm.h  upload.sh
src/include/: FreeRTOSConfig.h
